--- a/app/src/main/res/layout/activity_hybridservice.xml
+++ b/app/src/main/res/layout/activity_hybridservice.xml
@@ -24,7 +24,8 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginTop="30dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/mc">
 
             <TextView
                 android:id="@+id/hybrid_services"
@@ -36,14 +37,13 @@
                 android:paddingLeft="5dp"
                 android:text="Hybrid Services"
                 android:typeface="serif"
-                android:background="@drawable/reg_edittext_style"
                 android:textColor="#000000"/>
 
             <Button
                 android:id="@+id/button1"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/kuk"/>
+                android:background="@drawable/qwqwe"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,7 +52,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/jk">
 
             <TextView
                 android:id="@+id/scheduled_maintenance"
@@ -63,7 +64,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="20dp"
                 android:text="Scheduled Maintenance"
-                android:background="@drawable/reg_edittext_style"
+
                 android:textColor="#000000"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -82,7 +83,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/jk">
 
             <TextView
                 android:id="@+id/state_battery"
@@ -93,7 +95,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="20dp"
                 android:text="State of Battery Testing"
-                android:background="@drawable/reg_edittext_style"
+
                 android:textColor="#000000"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -111,7 +113,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/jk">
 
         <TextView
             android:id="@+id/voltage_battery"
@@ -122,7 +125,7 @@
             android:paddingRight="7dp"
             android:paddingTop="20dp"
             android:text="Voltage Battery Testing "
-            android:background="@drawable/reg_edittext_style"
+
             android:textColor="#000000"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -140,7 +143,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/jk">
 
         <TextView
             android:id="@+id/voltage_cable"
@@ -151,7 +155,7 @@
             android:paddingRight="7dp"
             android:paddingTop="20dp"
             android:text="Volatge Cable Inspection"
-            android:background="@drawable/reg_edittext_style"
+
             android:textColor="#000000"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -169,7 +173,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/jk">
 
         <TextView
             android:id="@+id/brake_system"
@@ -180,7 +185,7 @@
             android:paddingRight="7dp"
             android:paddingTop="20dp"
             android:text="Brake System Repair"
-            android:background="@drawable/reg_edittext_style"
+
             android:textColor="#000000"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -198,7 +203,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/jk">
 
         <TextView
             android:id="@+id/cooling_system"
@@ -209,7 +215,7 @@
             android:paddingRight="7dp"
             android:paddingTop="20dp"
             android:text="Cooling System Repair"
-            android:background="@drawable/reg_edittext_style"
+
             android:textColor="#000000"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -228,7 +234,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/jk">
 
             <TextView
                 android:id="@+id/heating_system"
@@ -239,7 +246,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="20dp"
                 android:text="Heating Sytsem Repair"
-                android:background="@drawable/reg_edittext_style"
+
                 android:textColor="#000000"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -258,7 +265,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/jk">
 
             <TextView
                 android:id="@+id/fuel_system"
@@ -269,7 +277,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="10dp"
                 android:text="Fuel System Repair"
-                android:background="@drawable/reg_edittext_style"
+
                 android:textColor="#000000"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -288,7 +296,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@drawable/jk">
 
             <TextView
                 android:id="@+id/engine_service"
@@ -299,7 +308,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="10dp"
                 android:text="Engine Service "
-                android:background="@drawable/reg_edittext_style"
+
                 android:textColor="#000000"
                 android:textSize="21dp"
                 android:typeface="serif" />
