--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,19 +25,18 @@
             android:id="@+id/spinnerCountries"
             android:layout_width="100dp"
             android:paddingTop="10dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:paddingBottom="10dp"
             android:background="@drawable/roundrectangle"
             android:layout_height="60dp"></Spinner>
 
         <EditText
             android:id="@+id/editTextPhone"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:digits="0123456789"
-            android:hint="Enter your number"
+            android:hint="Enter Number"
             android:maxLength="10"
             android:paddingTop="20dp"
             android:paddingBottom="30dp"
