--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VerifyPhoneActivity"
-    android:background="@drawable/newwheal">
+    android:background="@drawable/nirauu">
 
 
 
@@ -17,64 +17,68 @@
         android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="250dp"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/rectangle"
-            android:layout_marginLeft="30dp"
-            android:paddingLeft="30dp"
-            android:paddingTop="10dp"
-            android:paddingRight="20dp"
-            android:paddingBottom="20dp"
-            android:text="Wait for the code I sent you..."
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/colorPrimaryDark" />
-        <EditText
-            android:id="@+id/editTextCode"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textView"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="90dp"
-            android:digits="0123456789"
-            android:background="@drawable/rectangle"
-            android:paddingLeft="30dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="20dp"
-            android:hint="enter code"
-            android:maxLength="6" />
-        <Button
-            android:id="@+id/buttonSignIn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editTextCode"
-             android:layout_marginLeft="105dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/login"
-            android:text="Login"
-            android:paddingBottom="10dp"
-            android:textAllCaps="false"
-            android:textColor="#ffffff" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginRight="35dp"
+            android:padding="10dp"
+            android:layout_marginTop="140dp"
+            android:orientation="vertical"
+            android:background="@drawable/niraua">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/rectangle"
+                android:layout_marginLeft="47dp"
+                android:paddingLeft="30dp"
+                android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="20dp"
+                android:text="Wait for the code I sent you..."
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorPrimaryDark" />
+            <EditText
+                android:id="@+id/editTextCode"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="70dp"
+                android:digits="0123456789"
+                android:background="@drawable/rectangle"
+                android:paddingLeft="20dp"
+
+                android:paddingTop="10dp"
+                android:paddingBottom="20dp"
+                android:hint="enter code"
+                android:maxLength="6" />
+            <Button
+                android:id="@+id/buttonSignIn"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/editTextCode"
+                android:layout_marginLeft="105dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/login"
+                android:text="Login"
+                android:paddingBottom="10dp"
+                android:textAllCaps="false"
+                android:textColor="#ffffff" />
 
 
-        <ProgressBar
-            android:id="@+id/progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_below="@id/buttonSignIn"
-            android:layout_marginLeft="125dp"
-            android:visibility="gone" />
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/buttonSignIn"
+                android:layout_marginLeft="225dp"
+                android:visibility="gone" />
 
-    </LinearLayout>
+        </LinearLayout>
 
 
     </LinearLayout>
